@@ -42,11 +42,35 @@ public class CodeBase {
      * @return - returns an array that represents matrix.
      */
     protected static int[][] readMatrix(List<String> input) {
-        var result = new int[input.size()][input.get(0).length()];
+        var result = new int[input.size()][input.getFirst().length()];
         for (var y = 0; y < input.size(); y++) {
             var line = input.get(y);
             for (var x = 0; x < line.length(); x++) {
                 result[y][x] = line.charAt(x) - '0';
+            }
+        }
+
+        return result;
+    }
+
+    /** Read text lines into a matrix with char values where each value represents a digit from 0 to 9.
+     * Example input:
+     * <pre>
+     * AAAAA
+     * BCCCB
+     * EDEDE
+     * AACAA
+     * BBBBB
+     * </pre>
+     * @param input - Text lines to parse into matrix.
+     * @return - returns an array that represents matrix.
+     */
+    protected static char[][] readCharMatrix(List<String> input) {
+        var result = new char[input.size()][input.getFirst().length()];
+        for (var y = 0; y < input.size(); y++) {
+            var line = input.get(y);
+            for (var x = 0; x < line.length(); x++) {
+                result[y][x] = line.charAt(x);
             }
         }
 
